<resources>
    <string name="app_name">TimeOut</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_employee_screen">MainActivity</string>
    <string name="title_activity_manager_screen">ManagerActivity</string>
    <string name="title_activity_employee_editor">Employee_editor</string>
    <string name="title_activity_clockinout_history">ClockInOut_history</string>
    <string name="enter">ENTER</string>
    <string name="back">BACK</string>
    <string name="button1">1</string>
    <string name="button2">2</string>
    <string name="button3">3</string>
    <string name="button4">4</string>
    <string name="button5">5</string>
    <string name="button6">6</string>
    <string name="button7">7</string>
    <string name="button8">8</string>
    <string name="button9">9</string>
    <string name="button0">0</string>
    <string name="empty">Empty</string>
</resources>
